test/tests/compiler/8_loops/invalid_parse/invalid_for_declaration.plx
pub fn main(none) i32 {
    loop while i: i32 = 0 .. i = i + 1 {
        ;
    }
    return 0
}
